--- a/Listas/Lista_7/exerc_1/home.html
+++ b/Listas/Lista_7/exerc_1/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,21 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="home.css">
 </head>
+
 <body>
     <div class="content-main">
         <div class="content-image">
+
+
+            <div class="content-form">
+                <div class="form">
+                    <input type="email" placeholder="E-mail">
+                    <input type="password" placeholder="Senha">
+                    <button>Login</button>
+                </div>
+            </div>
         </div>
-        <div class="content-form"></div>
-        
     </div>
 </body>
+
 </html>
